Features
========
Working on 
	Added Deleted on server feature. (low priority)

0.68
	CardDAV addressbooks now appear in the compose window

0.67
	drag and dropping a card from a GroupDAV directory would not delete the card on the server
	using the German translation would prevent the groupdav addressbook dialog to appear properly
	the synchronize button would no longer be activated
	deleting cards in GroupDAV directories would delete them on the server before the confirmation window was answered
	the creation window for remote DAV addressbooks would no longer be accepted
	added handling of personal mailing lists, using a versit-style format named "VLIST"
	drag and dropping contacts from one groupdav directory to another, and back, would generate an exception and drop the card

0.66
	rewrite of the CardDAV addressbook implementation
	  fixes the situation where one was not able to write to a mailing list
	  fixes the duplicate entries for such addressbooks
	  fixes the autocompletion working only one time per two tries
	improved the performance and the reliability of the freebusy resolution in the attendees window
	added a hook to give up the startup process to the SOGo Integrator if present

0.65.1
	fixed support for freebusy entries containing multiple intervals on
	the same line

0.65
	added asynchronous autocompletion
	added the handling of organizers for whom the user id IS an email address
	fixed a crash occuring during autocompletion operations on LDAP addressbooks
	reenabled the ability to download cards from OGo (upload still doesn't work)
	added patch from https://bugzilla.mozilla.org/show_bug.cgi?id=408727
	to speedup the display of the monthly view in lightning

0.64
	rewrote the upload mechanism to use the Mozilla webdav library
	generate better identifiers for new vCards
	code cleanup

0.63
	rewrite of the vcard parsing to accept more variations and encodings
	enhancements to the autocompletion algorithm to avoid doubles