@@ -1,28 +1,24 @@
-content 	sogo-connector       	chrome/content/sogo-connector/
-skin    	sogo-connector  			classic/1.0 chrome/skin/classic/sogo-connector/
-locale	sogo-connector en-US	   chrome/locale/en-US/sogo-connector/
-locale	sogo-connector fr-FR	   chrome/locale/fr-FR/sogo-connector/
-locale	sogo-connector de-DE 	chrome/locale/de-DE/sogo-connector/
+content sogo-connector	chrome/content/sogo-connector/
+skin	sogo-connector	classic/1.0	chrome/skin/classic/sogo-connector/
+locale	sogo-connector	en-US		chrome/locale/en-US/sogo-connector/
+locale	sogo-connector	fr-FR		chrome/locale/fr-FR/sogo-connector/
+locale	sogo-connector	de-DE		chrome/locale/de-DE/sogo-connector/
 
 content inverse-library chrome/content/inverse-library/
-
-overlay	chrome://calendar/content/sun-calendar-event-dialog.xul chrome://sogo-connector/content/calendar/calendar-event-dialog.xul
-overlay	chrome://calendar/content/sun-calendar-event-dialog-attendees.xul chrome://sogo-connector/content/calendar/calendar-event-dialog-attendees.xul
-
-#overlay	chrome://lightning/content/messenger-overlay-sidebar.xul chrome://sogo-connector/content/lightning/messenger-overlay-sidebar.xul
 
 overlay	chrome://messenger/content/messenger.xul chrome://sogo-connector/content/addressbook/messenger.groupdav.overlay.xul
 overlay	chrome://messenger/content/messageWindow.xul chrome://sogo-connector/content/addressbook/messagewindow-overlay.xul
 overlay	chrome://messenger/content/addressbook/addressbook.xul chrome://sogo-connector/content/addressbook/addressbook.groupdav.overlay.xul
 overlay chrome://messenger/content/messengercompose/messengercompose.xul chrome://sogo-connector/content/addressbook/messengercompose-overlay.xul
-
 overlay	chrome://messenger/content/addressbook/abNewCardDialog.xul chrome://sogo-connector/content/addressbook/abNewCardDialog.groupdav.overlay.xul
 overlay	chrome://messenger/content/addressbook/abEditCardDialog.xul chrome://sogo-connector/content/addressbook/abEditCardDialog.groupdav.overlay.xul
-
 overlay	chrome://messenger/content/addressbook/abMailListDialog.xul chrome://sogo-connector/content/addressbook/edit-list-overlay.xul
 overlay chrome://messenger/content/addressbook/abEditListDialog.xul chrome://sogo-connector/content/addressbook/edit-list-overlay.xul
 overlay chrome://messenger/content/addressbook/abContactsPanel.xul chrome://sogo-connector/content/addressbook/contactspanel-overlay.xul
-
 overlay chrome://messenger/content/addressbook/pref-editdirectories.xul chrome://sogo-connector/content/addressbook/pref-editdirectories.overlay.xul
-
 style chrome://sogo-connector/content/addressbook/addressbook.groupdav.overlay.xul chrome://sogo-connector/skin/addressbook/addressbook.groupdav.overlay.css
+
+overlay	chrome://calendar/content/sun-calendar-event-dialog.xul chrome://sogo-connector/content/calendar/calendar-event-dialog.xul
+overlay	chrome://calendar/content/sun-calendar-event-dialog-attendees.xul chrome://sogo-connector/content/calendar/calendar-event-dialog-attendees.xul
+overlay chrome://calendar/content/calendar-calendars-list.xul chrome://sogo-connector/content/calendar/calendars-list-overlay.xul
+#overlay	chrome://lightning/content/messenger-overlay-sidebar.xul chrome://sogo-connector/content/lightning/messenger-overlay-sidebar.xul
